# hob

./: .gitignore  .projectile  README.md  hob.cabal  hob.cabal.template  index.html  mkCabal.sh  params.json
app-data/: ui.glade
app-data/themes/gtk/default/: README.md  app-specific.css  gtk-common.css  gtk-dark.css  gtk-fallback.css  gtk-widgets-backgrounds-and-texts.css  gtk-widgets-borders.css  gtk-widgets.css  keybindings.css  reset.css
src/: hob.hs
src/lib/Hob/: Command.hs  Context.hs  Control.hs  DirectoryTree.hs  Ui.hs
src/lib/Hob/Command/: CloseCurrentTab.hs  FindText.hs  FocusCommandEntry.hs  FocusNextTab.hs  FocusNumberedTab.hs  FocusPreviousTab.hs  FocusSidebar.hs  NewTab.hs  ReloadSidebarTree.hs  ReplaceText.hs  SaveCurrentTab.hs
src/lib/Hob/Context/: CommandMatcher.hs  Editor.hs  Events.hs  FileContext.hs  StyleContext.hs  Types.hs  UiContext.hs
src/lib/Hob/Ui/: CommandEntry.hs  Editor.hs  Sidebar.hs  SidebarSearch.hs
src/lib/Hob/Ui/Editor/: Fancy.hs  Search.hs
src/lib/Hob/Ui/Editor/Fancy/: Commands.hs  Parser.hs  Renderer.hs  Shapes.hs  Types.hs
test/Hob/: CommandSpec.hs  ContextSpec.hs  ControlSpec.hs  DirectoryTreeSpec.hs  UiSpec.hs
test/Hob/Command/: CloseCurrentTabSpec.hs  FindTextSpec.hs  FocusCommandEntrySpec.hs  FocusNextTabSpec.hs  FocusNumberedTabSpec.hs  FocusPreviousTabSpec.hs  FocusSidebarSpec.hs  NewTabSpec.hs  ReloadSidebarTreeSpec.hs  ReplaceTextSpec.hs  SaveCurrentTabSpec.hs
test/Hob/Context/: FileContextSpec.hs  StyleContextSpec.hs
test/Hob/Ui/: CommandEntrySpec.hs  EditorSpec.hs  SidebarSearchSpec.hs  SidebarSpec.hs
test/Hob/Ui/Editor/: SearchSpec.hs
test/HobTest/: Control.hs  Editor.hs  Sidebar.hs
test/HobTest/Context/: Default.hs  Stubbed.hs
ui/: ui.glade
ui/themes/adwaitaGrnPlus/: gtk-common.css  gtk-dark.css  gtk-widgets-assets.css  gtk.css
ui/themes/gtk/default/: app-specific.css  gnome-applications.css  gtk-dark.css  gtk-widgets-assets-dark.css  gtk-widgets.css
