name: hob
version: 0.0.1.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
copyright: (c) Sarunas Valaskevicius
maintainer: Sarunas Valaskevicius <rakatan@gmail.com>
stability: alpha
bug-reports: mailto:rakatan@gmail.com
description:
category: IDE
author: Sarunas Valaskevicius
data-dir: ""

source-repository head
    type: git
    location: https://github.com/svalaskevicius/hob

executable hob
    build-depends: base >=4.2 && <5, gtk3 >=0.13.0.0, mtl >=2.1.0 && <2.2.0,
                   directory -any, containers -any, filepath -any, hob, bytestring -any, text >= 1.1.1.0 && < 1.1.2.0
    main-is: hob.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

library
    Exposed-modules:     Hob.Ui, Hob.DirectoryTree
    default-language:    Haskell2010
    hs-source-dirs:      src/lib
    build-depends: base >=4.2 && <5, containers -any,
                   filepath -any, glib >=0.13.0.0, gtk3 >=0.13.0.0,
                   gtksourceview3 >=0.13.0.0, mtl >=2.1.0 && <2.2.0,
                   transformers >=0.3.0.0 && <0.4, text >= 1.1.1.0 && < 1.1.2.0

test-suite spec
  type:
      exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
  build-depends:
      base    >= 4.2 && <5, containers -any, mtl >=2.1.0 && <2.2.0
    , hspec   >= 1.11, gtk3 >=0.13.0.0, hob, text >= 1.1.1.0 && < 1.1.2.0
