name: hob
version: 0.0.1.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: (c) Sarunas Valaskevicius
maintainer: Sarunas Valaskevicius <rakatan@gmail.com>
synopsis: A source code editor aiming for the convenience of use
stability: alpha
bug-reports: github.com/svalaskevicius/hob/issues
description:
category: IDE
author: Sarunas Valaskevicius
data-dir: app-data
data-files: ui.glade,
            themes/gtksourceview/*.xml,
            themes/gtk/default/*.css,
            themes/gtk/default/assets/*.png,
            themes/gtk/default/assets/*.svg

source-repository head
    type: git
    location: https://github.com/svalaskevicius/hob

executable hob
    build-depends: base >=4.2 && <5, gtk3 >=0.13.0.0, mtl >=2.1.0 && <2.2.0,
                   directory -any, containers -any, filepath -any, hob, bytestring -any, text >= 1.1.1.0 && < 1.1.2.0,
                   gtksourceview3 >=0.13.0.0
    main-is: hob.hs
    buildable: True
    default-language: Haskell2010
    ghc-options:
        -Wall -Werror
    hs-source-dirs: src

library
    Exposed-modules:     Hob.Ui, Hob.DirectoryTree, Hob.Control,
                         Hob.Command, Hob.Command.FindText, Hob.Command.CloseCurrentTab,
                         Hob.Command.SaveCurrentTab, Hob.Command.NewTab, Hob.Command.FocusCommandEntry,
                         Hob.Context, Hob.Context.StyleContext, Hob.Context.FileContext
    default-language:    Haskell2010
    ghc-options:
        -Wall -Werror
    hs-source-dirs:      src/lib
    build-depends: base >=4.2 && <5, containers -any,
                   filepath -any, glib >=0.13.0.0, gtk3 >=0.13.0.0, pango >= 0.13.0.0,
                   gtksourceview3 >=0.13.0.0, mtl >=2.1.0 && <2.2.0,
                   transformers >=0.3.0.0 && <0.4, text >= 1.1.1.0 && < 1.1.2.0,
                   system-filepath -any

test-suite spec
  type:
      exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
  build-depends:
      base    >= 4.2 && <5, containers -any, mtl >=2.1.0 && <2.2.0,
      hspec   >= 1.11, gtk3 >=0.13.0.0, hob, text >= 1.1.1.0 && < 1.1.2.0, gtksourceview3 >=0.13.0.0
